# global-gradient-based-groundwater-model

./: .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_GTest.txt  CONTRIBUTING.md  PAPER.md  README.md  codemeta.json  paper.bib  paper.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  FindGMock.cmake
docs/: .gitignore  CNAME  Doxyfile  _config.yml  concept.md  config.md  coupling.md  density-flow.md  getting_started.md  inandout.md  index.md  input_output.md  tutorials.md
docs/concept/: density-flow.md
docs/getting_started/: coupling.md  tut1.md  unittests.md
docs/html_doku/: .buildinfo  LICENSE.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html_doku/_sources/: LICENSE.rst.txt  README.rst.txt  index.rst.txt
docs/input_output/: cmakelists.md  config.md  data.md  output.md
docs/modelconcept/: config.md  density-flow.md  inandout.md
docs/tutorials/: tut1.md
lib/: CMakeLists.txt
lib/Eigen/: CMakeLists.txt
lib/Eigen/src/: CMakeLists.txt
lib/Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h  IncompleteLUT.h  IterativeSolverBase.h
lib/Eigen/src/PardisoSupport/: PardisoSupport.h
src/: CMakeLists.txt  CouplingInterface.hpp  GW_Interface.hpp
src/DataProcessing/: DataReader.hpp  Neighbouring.cpp  Neighbouring.hpp
src/DataProcessing/DataOutput/: Converter.hpp  FieldCollector.hpp  OutputFactory.hpp  OutputManager.hpp
src/Logging/: Logging.hpp  Sinks.hpp
src/Misc/: CMakeLists.txt  Helpers.hpp  ResolutionIterator.hpp  SimulationOutput.hpp  serializer.hpp
src/Model/: CMakeLists.txt  DensitySurfaces.cpp  DensitySurfaces.hpp  ExternalFlows.cpp  ExternalFlows.hpp  FluidMechanics.cpp  FluidMechanics.hpp  Node.cpp  Node.hpp  PhysicalProperties.hpp  Units.hpp  VariableDensityFlow.cpp  VariableDensityFlow.hpp
src/Simulation/: Options.cpp  Options.hpp  Simulation.cpp  Simulation.hpp  Stepper.hpp  sensitivity.hpp
src/Solver/: Equation.cpp  Equation.hpp  Numerics.hpp
tests/: CMakeLists.txt  testrunner.cpp
tests/Global/: CMakeLists.txt  GlobalDataReader.hpp  config.json  runner.cpp  runner.hpp
tests/Integration/: CMakeLists.txt  Integration.hpp
tests/LargeModel/: CMakeLists.txt  GlobalDataReader.hpp  Makefile  config.json  config_gnc.json  config_na.json  config_na_continued.json  config_nz.json  config_two_layers.json  out.json  runner.cpp  runner.hpp
tests/LargeModel/data_5min/: ghb_conductivity_na.csv  grid_aus.csv  grid_nz_refined.csv  initial_zetas_nz.csv  zeta1_t_10000.csv  zeta2_t_10000.csv
tests/LargeTransientModel/: CMakeLists.txt  TransientDataReader.hpp  config_gnc_transient.json  config_na_transient.json  config_nz_transient.json  config_transient.json  transient_runner.cpp  transient_runner.hpp
tests/LargeTransientModel/data_5min/: ghb_conductivity_na.csv  grid_nz.csv  grid_nz_refined.csv  grid_nz_refined_16.csv
tests/NewZealand/: CMakeLists.txt  GlobalDataReader.hpp  cmake_install.cmake  config.json  runner.cpp
tests/NewZealand/data_5min/: blue_NZ.csv  elevation_NZ.csv  grid_nz.csv  litho_NZ.csv  mother_NZ.csv  recharge_NZ.csv  recharge_nz.csv  wtd_NZ.csv
tests/NewZealandVDF/: CMakeLists.txt  GlobalDataReader.hpp  config.json  out.json  runner.cpp  runner.hpp
tests/NewZealandVDF/data_5min/: grid_nz.csv  initial_zetas.csv
tests/RefinedCoastModel/: CMakeLists.txt  RefinedCoastDataReader.hpp  config.json  out.json  refinedCoast.cpp
tests/RefinedCoastModel/data/: elevation.csv  ghb_conductance.csv  heads.csv
tests/SWI2_ex1/: CMakeLists.txt  SWI2_ex1_DataReader.hpp  config.json  out.json  swi2_ex1.cpp  swi2_ex1.hpp
tests/SWI2_ex1/data/: elevation.csv  ghb_conductance.csv  grid.csv  initial_zetas.csv  recharge.csv
tests/SWI2_ex2/: CMakeLists.txt  SWI2_ex2_DataReader.hpp  config.json  out.json  swi2_ex2.cpp  swi2_ex2.hpp
tests/SWI2_ex2/data/: effective_porosity.csv  elevation.csv  ghb_conductance.csv  grid.csv  zeta1.csv  zeta2.csv  zones_sources_sinks.csv
tests/SWI2_ex3/: CMakeLists.txt  SWI2_ex3_DataReader.hpp  config.json  out.json  swi2_ex3.cpp  swi2_ex3.hpp
tests/SWI2_ex3/data/: elevation.csv  ghb_conductance.csv  grid.csv  initial_zetas.csv  recharge.csv  zones_sources_sinks.csv
tests/SimpleModel/: CMakeLists.txt  SimpleDataReader.hpp  config.json  config_coast.json  out.json  simple.cpp  simple.hpp
tests/SimpleModel/data/: elevation.csv  ghb_coast.csv  grid.csv  heads.csv  lithology.csv  recharge.csv  rivers.csv
tests/SimpleRefinedModel/: CMakeLists.txt  SimpleRefinedDataReader.hpp  config.json  config_coast.json  out.json  simpleRefined.cpp  simpleRefined.hpp
tests/SimpleRefinedModel/data/: elevation.csv  elevation_coast.csv  ghb_coast.csv  ghb_conductance.csv  grid.csv  grid_coast.csv  heads.csv  heads_coast.csv  lithology.csv  lithology_coast.csv  recharge.csv  recharge_coast.csv  rivers.csv  rivers_coast.csv
tests/SimpleUSGModel/: SimpleDataReader.hpp  config.json
tests/SimpleUSGModel/data/: elevation.csv  ghb_conductance.csv  (+4 more)
tests/SimpleVDFModel/: CMakeLists.txt  SimpleVDFDataReader.hpp  config.json  out.json  simpleVDF.cpp  simpleVDF.hpp
tests/SimpleVDFModel1/: CMakeLists.txt  SimpleVDF1DataReader.hpp  config.json  out.json  simpleVDF1.cpp  simpleVDF1.hpp
tests/SimpleVDFModel2/: CMakeLists.txt  SimpleVDF2DataReader.hpp  config.json  out.json  simpleVDF2.cpp  simpleVDF2.hpp
tests/SimpleVDFModel3/: CMakeLists.txt  SimpleVDF3DataReader.hpp  config.json  out.json  simpleVDF3.cpp  simpleVDF3.hpp
tests/SimpleVDFModel4/: CMakeLists.txt  SimpleVDF4DataReader.hpp  config.json  out.json  simpleVDF3.hpp  simpleVDF4.cpp  simpleVDF4.hpp
tests/USG_ex1/: CMakeLists.txt  USG_ex1_DataReader.hpp  config.json  out.json  usg_ex1.cpp  usg_ex1.hpp
tests/Unit/: CMakeLists.txt  UnitTests.hpp
tests/files/: CMakeLists.txt  grid_multipleLayers.txt  grid_oneLayer.txt  motherDefSIMPLE.csv  motherDefSIMPLE2.csv  simple.txt  simple_3D.txt  test_config.json  test_config_simple.json
tests/fixtures/: CMakeLists.txt  DataReaderFixture.hpp  SimulationFixture.hpp
(+59 files in other folders)
